tests/org.eclipse.php.core.tests/workspace/errors/php7/testTypeReferenceError.pdtt
--TEST--
Bug 516485 - Constants are validated as types
--FILE--
<?php
namespace name;

use Test\Boo\ {
	Exception,
	const Foo, 
	function FooX as MyAlias
};
--EXPECT--
[line=5, start=40, end=49] The import Test\Boo\Exception cannot be resolved
